# gymboy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_py_boy.py  tetris.state
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/actions/: download-and-setup-roms-ubuntu.yml
.github/actions/download-and-setup-roms/: action.yml
.github/actions/download-and-setup-roms-ubuntu/: action.yml
.github/actions/download-and-setup-roms-windows/: action.yml
.github/workflows/: check-format.yaml  download-roms-ubuntu.yml  publish-testpypi.yml  run-unittests-ubuntu.yml  run-unittests-windows.yml  run-unittests.yml
gymboy/: __init__.py  registration.py
gymboy/environments/: __init__.py  env.py
gymboy/environments/kirby/: __init__.py
gymboy/environments/kirby/dream_land_1/: __init__.py  _constant.py  _memory.py  kirby_dream_land_1.py
gymboy/environments/mario/: __init__.py  land.py  land_2.py  super_mario_land_2.py
gymboy/environments/mario/land_1/: __init__.py  memory.py  (+3 more)
gymboy/environments/pokemon/: __init__.py  blue.py  gold.py  red.py  silver.py  yellow.py
gymboy/environments/tetris/: __init__.py
gymboy/resources/roms/: README.md  readme.txt
gymboy/resources/states/: README.md  pokemon_blue_after_intro.state  pokemon_silver_after_intro.state  pokemon_yellow_after_intro.state  super_mario_land_1_1.state  super_mario_land_2_a_0_0.state
gymboy/utils/: __init__.py  binary.py  env.py  resource.py
tests/: test_registration.py
tests/environments/mario/: test_super_mario_land.py
tests/environments/pokemon/: test_blue.py  test_gold.py  test_red.py  test_silver.py  test_yellow.py
tests/utils/: test_binary.py  test_env.py  test_resource.py
(+104 files in other folders)
