[project]
name = "gymboy"
version = "1.0.0"
dependencies = [
    "numpy==2.1.2",
    "gymnasium==1.0.0",
    "pyboy==2.4.0",
    "scikit-image==0.24.0",
]
requires-python = ">=3.10"
authors = [
    { name = "Dennis Jabs" },
]
description = "PyBoy environments in Gymnasium"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"
