[project]
name = "gymboy"
version = "0.0.1"
description = "Gameboy (Color) environments in Gymnasium 🤖"
authors = [
    {name = "Dennis Jabs", email = ""},
]
dependencies = [
    "gymnasium>=1.1.1",
    "pyboy>=2.5.3",
    "scikit-image>=0.25.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
